Fix images on mobile

--- a/css/post.css
+++ b/css/post.css
@@ -22,6 +22,14 @@ img {
   padding: 40px;
 }
 
+@media screen and (max-width: 500px) {
+  img {
+    width: 100%;
+    padding: 10px;
+  }
+}
+
+
 h2, h3 {
   padding-top: 30px;
 }
